src/test/ui/default-ty-param-fallback/bad_messages/fallback_conflict_cross_crate.stderr
error[E0308]: mismatched types
  --> $DIR/fallback_conflict_cross_crate.rs:24:9
   |
24 |     meh(foo);
   |         ^^^ expected bool, found char

error: aborting due to previous error

